* implements /auth/refresh route * fixes logic for refresh token, payload will always change because of a created_at stamp
