# api/swagger/swagger.yaml
@@ -39,6 +39,27 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /auth/refresh:
+    x-swagger-router-controller: auth
+    post:
+      description: Issues a new JWT for user access given a refresh token
+      operationId: refresh
+      parameters:
+      - name: body
+        in: body
+        description: The refresh token of a successful prior login
+        required: true
+        schema:
+          $ref: "#/definitions/Refresh"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/LoginResult"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /user/profile:
     # binds a127 app logic to a route
     x-swagger-router-controller: user
@@ -126,6 +147,10 @@ definitions:
       email:
         type: string
       password:
+        type: string
+  Refresh:
+    properties:
+      refresh_token:
         type: string
   LoginResult:
     properties:
